# pytest-automock

./: .gitignore  .travis.yml  README.md  history.md  pytest.ini  setup.cfg
.github/workflows/: ci.yml
pytest_automock/: __init__.py  mock.py  plugin.py
tests/: conftest.py  test_automock.py  test_plugin.py
