[metadata]
name = pytest-automock
version = attr: pytest_automock.__version__
url = https://github.com/pohmelie/pytest-automock
description = Jticker core
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = pytest_automock
python_requires = >= 3.6

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-asyncio
    flake8

[options.entry_points]
pytest11 =
    automock = pytest_automock.plugin
